add uploading mariner certificates

--- a/.htaccess
+++ b/.htaccess
@@ -28,3 +28,9 @@
 	</IfModule>
 
 </IfModule>
+
+php_value upload_max_filesize 15M
+php_value max_input_time 5000
+php_value max_execution_time 5000
+
+php_value post_max_size 20M
